# satb

./: Crossing The Bar-4part.musicxml  Crossing The Bar-Soprano-Soprano.musicxml  Crossing The Bar-Soprano.musicxml  Crossing The Bar.musicxml  README.md  pyproject.toml  satb
.roo/rules/: 01-general.md  music21.md  python.md
src/satb/: __init__.py
