[project]
name = "satb"
version = "0.1.0"
description = "A command-line tool for processing MusicXML files for SATB choral arrangements"
readme = "README.md"
authors = [
    { name = "Rob Napier", email = "rob@neverwood.org" }
]
requires-python = ">=3.9"
dependencies = [
    "music21>=8.3.0",
]

[project.scripts]
satb = "satb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
